# ftcdocs-helper

./: README.md
cookiebanner/: README.rst  setup.py
cookiebanner/sphinxcontrib/: cookiebanner.py
googleanalytics/sphinxcontrib/: googleanalytics.py
javasphinx/: README.md
sphinx_rtd_dark_mode_v2/: README.md  pyproject.toml
sphinx_rtd_dark_mode_v2/sphinx_rtd_dark_mode/: __init__.py  figure.py
sphinx_rtd_dark_mode_v2/sphinx_rtd_dark_mode/static/dark_mode_css/: dark.css  general.css
sphinx_rtd_dark_mode_v2/sphinx_rtd_dark_mode/static/dark_mode_js/: theme_switcher.js
